# gameOfLifeKokkos

./: .gitignore  CMakeLists.txt  Makefile  README.md  gol.cpp  spack.yaml
data/: 0_0  0_44  0_81  1_1  1_19  1_48  2_1  2_39  2_44  3_1  3_12  3_2  3_55
